--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 			//basic svg setup
 			var width = 1000;
 			var height = 600;
+			var firstLoad = true
 			var svg = d3.select("#mapHere").append("svg").attr("width", width).attr("height", height);
 			var path = d3.geoPath();
 			var selected = new Map();
@@ -134,17 +135,30 @@
 
 			//radio button setup
 			var popradio = d3.select("#pop")
-			popradio.on("change", radioUpdate)
+			popradio.on("change", function(){
+				renderMap()
+			})
 			var pid3radio = d3.select("#pid3")
-			pid3radio.on("change", radioUpdate)
+			pid3radio.on("change", function(){
+				renderMap()
+			})
 			var vote2016radio = d3.select('#vote2016')
-			vote2016radio.on("change", radioUpdate)
+			vote2016radio.on("change", function(){
+				renderMap()
+			})
 			var vote2012radio = d3.select('#vote2012')
-			vote2012radio.on("change", radioUpdate)
+			vote2012radio.on("change", function(){
+				renderMap()
+			})
 
 			//state county toggle
 			var stateCountyCheckbox = d3.select("#stateCountyCheck")
-			stateCountyCheckbox.on("change", renderMap)
+			stateCountyCheckbox.on("change", function(){
+				renderMap()
+			})
+
+			//this is the line that actually draws the map. all vars and stuff should be above it. only functions should be below it.
+			renderMap()
 			
 			function clrButtonClick(){
 				selected = new Map()
@@ -419,51 +433,50 @@
 				});
 			}
 
-			function radioUpdate(){
-				d3.selectAll("path").attr("fill", function(d){
-					if(d){
-						if(popradio.property("checked") && !(stateCountyCheckbox.property("checked"))){
-							var total = 0;
-							for(var i=0; i < popDist.length; i++){
-								total += popDist[i];
-							}
-							total = total/10000
-							return "rgb(" + popDist[parseInt(d.id)]/total + ",0," + popDist[parseInt(d.id)]/total + ")"
-						} else if(pid3radio.property("checked")  && !(stateCountyCheckbox.property("checked"))){
-							var colors = maxParty(partyDist, d);
-							return "rgb(" + colors[0] + "," + colors[1] + "," + colors[2] + ")";
-						} else if(vote2016radio.property("checked") && !(stateCountyCheckbox.property("checked"))){
-							var colors = maxVote2016(vote2016, d);
-							return "rgb(" + colors[0] + "," + colors[1] + "," + colors[2] + ")";
-						} else if(vote2012radio.property("checked") && !(stateCountyCheckbox.property("checked"))){
-							var colors = maxVote2012(vote2012, d);
-							return "rgb(" + colors[0] + "," + colors[1] + "," + colors[2] + ")";
-						}else if(popradio.property("checked") && stateCountyCheckbox.property("checked")){
-							let id = parseInt(d.id);
-							let value = 0;
-							if(popDistCounty[id]){
-								value = popDistCounty[id]*10;
-							}
-							return "rgb(" + value + ",0," + value + ")"
-						}else if(pid3radio.property("checked")  && stateCountyCheckbox.property("checked")){
-							if(!maxPartyCty.get(parseInt(d.id))){
-								return "rgb(0,0,0)"
-							}
-							return maxPartyCty.get(parseInt(d.id));
-						}else if(vote2016radio.property("checked") && stateCountyCheckbox.property("checked")){
-							if(!max2016VtCty.get(parseInt(d.id))){
-								return "rgb(0,0,0)"
-							}
-							return max2016VtCty.get(parseInt(d.id))
-						}else if(vote2012radio.property("checked") && stateCountyCheckbox.property("checked")){
-							if(!max2012VtCty.get(parseInt(d.id))){
-								return "rgb(0,0,0)"
-							}
-							var colors = max2012VtCty.get(parseInt(d.id))
-							return "rgb(" + colors[0] + "," + colors[1] + "," + colors[2] + ")";
+			function radioUpdate(d){
+				if(d){
+					if(popradio.property("checked") && !(stateCountyCheckbox.property("checked"))){
+						var total = 0;
+						for(var i=0; i < popDist.length; i++){
+							total += popDist[i];
 						}
+						total = total/10000
+						return "rgb(" + popDist[parseInt(d.id)]/total + ",0," + popDist[parseInt(d.id)]/total + ")"
+					} else if(pid3radio.property("checked")  && !(stateCountyCheckbox.property("checked"))){
+						var colors = maxParty(partyDist, d);
+						return "rgb(" + colors[0] + "," + colors[1] + "," + colors[2] + ")";
+					} else if(vote2016radio.property("checked") && !(stateCountyCheckbox.property("checked"))){
+						var colors = maxVote2016(vote2016, d);
+						return "rgb(" + colors[0] + "," + colors[1] + "," + colors[2] + ")";
+					} else if(vote2012radio.property("checked") && !(stateCountyCheckbox.property("checked"))){
+						var colors = maxVote2012(vote2012, d);
+						return "rgb(" + colors[0] + "," + colors[1] + "," + colors[2] + ")";
+					}else if(popradio.property("checked") && stateCountyCheckbox.property("checked")){
+						let id = parseInt(d.id);
+						let value = 0;
+						if(popDistCounty[id]){
+							value = popDistCounty[id]*10;
+						}
+						return "rgb(" + value + ",0," + value + ")"
+					}else if(pid3radio.property("checked")  && stateCountyCheckbox.property("checked")){
+						if(!maxPartyCty.get(parseInt(d.id))){
+							return "rgb(0,0,0)"
+						}
+						return maxPartyCty.get(parseInt(d.id));
+					}else if(vote2016radio.property("checked") && stateCountyCheckbox.property("checked")){
+						if(!max2016VtCty.get(parseInt(d.id))){
+							return "rgb(0,0,0)"
+						}
+						return max2016VtCty.get(parseInt(d.id))
+					}else if(vote2012radio.property("checked") && stateCountyCheckbox.property("checked")){
+						if(!max2012VtCty.get(parseInt(d.id))){
+							return "rgb(0,0,0)"
+						}
+						var colors = max2012VtCty.get(parseInt(d.id))
+						return "rgb(" + colors[0] + "," + colors[1] + "," + colors[2] + ")";
 					}
-				})
+				}
+
 			}
 
 			function renderMap(){
@@ -477,7 +490,8 @@
 			function loadAreas(statesBool){
 				svg.selectAll("*").remove()
 				loadData('data/output.tsv', function(poliData){
-				if(popDistCounty === undefined){
+				if(firstLoad){
+					firstLoad = false
 					popDist = getPopDist(poliData);
 					popDistCounty = getPopDistCounty(poliData);
 					partyDistCounty = getPartyCounty(poliData);
@@ -495,7 +509,6 @@
 				d3.json("https://d3js.org/us-10m.v1.json", function(error, us) {
 					if (error) throw error;
 					
-
 					if(statesBool){
 						svg.append("g")
 						.attr("class", "states")
@@ -505,6 +518,8 @@
 						.attr("d", path)
 						.attr("class", function(d){
 							return d.id
+						}).attr("fill", function(d){
+							return radioUpdate(d)
 						})
 					} else {
 						svg.append("g")
@@ -515,14 +530,13 @@
 						.attr("d", path)
 						.attr("class", function(d){
 							return d.id
+						}).attr("fill", function(d){
+							return radioUpdate(d)
 						})
 					}
 
 					svg.selectAll("path")
-						.attr("fill", function(){
-							//radioUpdate returns the colors based on what button is selected
-							radioUpdate()
-						}).attr("stroke", function(){
+						.attr("stroke", function(){
 							if(selected.get(d3.select(this).attr("class"))){
 								return selectedColor
 							} else {
@@ -544,9 +558,6 @@
 				});
 				});
 			}
-
-			renderMap()
-			
         </script>
     </body>
 </html>
