--- a/index.html
+++ b/index.html
@@ -633,6 +633,7 @@
 				}
 				d3.json("https://d3js.org/us-10m.v1.json", function(error, us) {
 					if (error) throw error;
+					svg.selectAll("g").remove()
 					svg.selectAll("path").remove()
 					if(statesBool){
 						svg.append("g")
