Added all filters except birth year

--- a/index.html
+++ b/index.html
@@ -112,6 +112,126 @@
 					<input type="checkbox" class="gender" value="1" id="male">Male</input>
 					<input type="checkbox" class="gender" value="2" id="female">Female</input>
 					<br>
+					<br>
+					Sexuality
+					<br>
+					<input type="checkbox" class="sexuality" value="1.0" id="hetero">Heterosexual/Straight</input>
+					<input type="checkbox" class="sexuality" value="2.0" id="lesbian">Lesbian/Gay Woman</input>
+					<input type="checkbox" class="sexuality" value="3.0" id="gay">Gay Man</input>
+					<input type="checkbox" class="sexuality" value="4.0" id="bi">Bisexual</input>
+					<br>
+					<br>
+					Transexual
+					<br>
+					<input type="checkbox" class="trans" value="1.0" id="yes_trans">Yes</input>
+					<input type="checkbox" class="trans" value="2.0" id="no_trans">No</input>
+					<br>
+					<br>
+					Education
+					<br>
+					<input type="checkbox" class="educ" value="1" id="no_hs">No HS</input>
+					<input type="checkbox" class="educ" value="2" id="hs_grad">High School Graduate</input>
+					<input type="checkbox" class="educ" value="3" id="some_colg">Some College</input>
+					<input type="checkbox" class="educ" value="4" id="yr2">2-Year</input>
+					<input type="checkbox" class="educ" value="5" id="yr4">4-Year</input>
+					<input type="checkbox" class="educ" value="6" id="post_grad">Post-Grad</input>
+					<br>
+					<br>
+					Race
+					<br>
+					<input type="checkbox" class="race" value="1" id="white">White</input>
+					<input type="checkbox" class="race" value="2" id="black">Black</input>
+					<input type="checkbox" class="race" value="3" id="hispanic">Hispanic</input>
+					<input type="checkbox" class="race" value="4" id="asian">Asian</input>
+					<input type="checkbox" class="race" value="5" id="native">Native American</input>
+					<input type="checkbox" class="race" value="8" id="mid_east">Middle Eastern</input>
+					<br>
+					<br>
+					Marital Status
+					<br>
+					<input type="checkbox" class="marstat" value="1.0" id="mar">Married</input>
+					<input type="checkbox" class="marstat" value="2.0" id="sep">Separated</input>
+					<input type="checkbox" class="marstat" value="3.0" id="div">Divorced</input>
+					<input type="checkbox" class="marstat" value="4.0" id="wid">Widowed</input>
+					<input type="checkbox" class="marstat" value="5.0" id="sing">Single</input>
+					<input type="checkbox" class="marstat" value="6.0" id="dom">Domestic Partnership</input>
+					<br>
+					<br>
+					Employment
+					<br>
+					<input type="checkbox" class="employ" value="1" id="full">Full-Time</input>
+					<input type="checkbox" class="employ" value="2" id="part">Part-Time</input>
+					<input type="checkbox" class="employ" value="3" id="temp">Temporarily Laid Off</input>
+					<input type="checkbox" class="employ" value="4" id="unemp">Unemployed</input>
+					<input type="checkbox" class="employ" value="5" id="retire">Retired</input>
+					<input type="checkbox" class="employ" value="6" id="dis">Permanently Disabled</input>
+					<input type="checkbox" class="employ" value="7" id="home">Homemaker</input>
+					<input type="checkbox" class="employ" value="8" id="stud">Sudent</input>
+					<br>
+					<br>
+					Religion
+					<br>
+					<input type="checkbox" class="religpew" value="1.0" id="prot">Protestant</input>
+					<input type="checkbox" class="religpew" value="2.0" id="roman">Roman Catholic</input>
+					<input type="checkbox" class="religpew" value="3.0" id="morm">Mormon</input>
+					<input type="checkbox" class="religpew" value="4.0" id="east_or_greek">Eastern or Greek Orthodox</input>
+					<input type="checkbox" class="religpew" value="5.0" id="jew">Jewish</input>
+					<input type="checkbox" class="religpew" value="6.0" id="mus">Muslim</input>
+					<input type="checkbox" class="religpew" value="7.0" id="bud">Buddhist</input>
+					<input type="checkbox" class="religpew" value="8.0" id="hindu">Hindu</input>
+					<input type="checkbox" class="religpew" value="9.0" id="ath">Atheist</input>
+					<input type="checkbox" class="religpew" value="10.0" id="agn">Agnostic</input>
+					<input type="checkbox" class="religpew" value="11.0" id="not">Nothing in Particular</input>
+					<input type="checkbox" class="religpew" value="12.0" id="else">Something Else</input>
+					<br>
+					<br>
+					Family Income
+					<br>
+					<input type="checkbox" class="faminc" value="1.0" id="lt10">Less than $10,000</input>
+					<input type="checkbox" class="faminc" value="2.0" id="ten">$10,000 - $19,999</input>
+					<input type="checkbox" class="faminc" value="3.0" id="twenty">$20,000 - $29,999</input>
+					<input type="checkbox" class="faminc" value="4.0" id="thirty">$30,000 - $39,999</input>
+					<input type="checkbox" class="faminc" value="5.0" id="fourty">$40,000 - $49,999</input>
+					<input type="checkbox" class="faminc" value="6.0" id="fifty">$50,000 - $59,999</input>
+					<input type="checkbox" class="faminc" value="7.0" id="sixty">$60,000 - $69,999</input>
+					<input type="checkbox" class="faminc" value="8.0" id="seventy">$70,000 - $79,999</input>
+					<input type="checkbox" class="faminc" value="9.0" id="eighty">$80,000 - $99,999</input>
+					<input type="checkbox" class="faminc" value="10.0" id="hundred">$100,000 - $119,999</input>
+					<input type="checkbox" class="faminc" value="11.0" id="hundred_20">$120,000 - $149,999</input>
+					<input type="checkbox" class="faminc" value="31.0" id="gt150">$150,000 or more</input>
+					<input type="checkbox" class="faminc" value="12.0" id="hundred_50">$150,000 - $199,999</input>
+					<input type="checkbox" class="faminc" value="13.0" id="two_hundred">$200,000 - $249,999</input>
+					<input type="checkbox" class="faminc" value="14.0" id="two_hundred_50">$250,000 - $349,999</input>
+					<input type="checkbox" class="faminc" value="15.0" id="three_hundred_50">$350,000 - $499,999</input>
+					<input type="checkbox" class="faminc" value="16.0" id="gt500">$500,000 or more</input>
+					<br>
+					<br>
+					3 Point Party Identification
+					<br>
+					<input type="checkbox" class="pid3" value="1.0" id="dem">Democrat</input>
+					<input type="checkbox" class="pid3" value="2.0" id="rep">Republican</input>
+					<input type="checkbox" class="pid3" value="3.0" id="ind">Independent</input>
+					<input type="checkbox" class="pid3" value="4.0" id="oth_pid3">Other</input>
+					<input type="checkbox" class="pid3" value="5.0" id="ns">Not Sure</input>
+					<br>
+					<br>
+					2016 Predisential Election
+					<br>
+					<input type="checkbox" class="CC16_410a" value="1.0" id="trump">Donald Trump (Republican)</input>
+					<input type="checkbox" class="CC16_410a" value="2.0" id="clinton">Hillary Clinton (Democrat)</input>
+					<input type="checkbox" class="CC16_410a" value="3.0" id="john">Gary Johnson (Libeertarian)</input>
+					<input type="checkbox" class="CC16_410a" value="4.0" id="stein">Jill Stein (Green)</input>
+					<input type="checkbox" class="CC16_410a" value="8.0" id="mcmul">Evan McMullin (Independent)</input>
+					<input type="checkbox" class="CC16_410a" value="5.0" id="oth_2016">Other</input>
+					<br>
+					<br>
+					2012 Predidential Election
+					<br>
+					<input type="checkbox" class="CC16_326" value="1.0" id="obama">Barack Obama</input>
+					<input type="checkbox" class="CC16_326" value="2.0" id="romney">Mitt Romney</input>
+					<input type="checkbox" class="CC16_326" value="3.0" id="se">Someone Else</input>
+					<br>
+					<br>
 					Clause
 					<br>
 					<input type="radio" name="clause" value="AND" id="and" checked>AND</input>
@@ -186,51 +306,43 @@
 				renderMap()
 			})
 
-			var maleFilter = d3.select("#male")
-			maleFilter.on("change", function(){
-				if (filterClause == 'AND'){
-					var boxes = document.getElementsByClassName('gender');
-					for(var i = 0; i < boxes.length; i++){
-						if(boxes[i].id != "male"){
-							if(boxes[i].checked == true){
-								boxes[i].checked = false;
-								filterValues.splice(filterID.indexOf(boxes[i].id), 1);
-								filterClass.splice(filterID.indexOf(boxes[i].id), 1);
-								filterID.splice(filterID.indexOf(boxes[i].id), 1);
-								filterLength = -1
-							}
-						}
-					}
+			var inp = document.getElementsByTagName('input');
+
+			for(var i = 0; i <inp.length; i++){
+				if(inp[i].type == 'checkbox' && inp[i].id != 'stateCountyCheck'){
+					d3.select('#' + inp[i].id).on("change", function(){
+						handleAND(this, filterData);
+					});
 				}
-				filterData(this);
-			});
-			var femaleFilter = d3.select('#female')
-			femaleFilter.on("change",function(){
-				if (filterClause == 'AND'){
-					var boxes = document.getElementsByClassName('gender');
-					for(var i = 0; i < boxes.length; i++){
-						if(boxes[i].id != "female"){
-							if(boxes[i].checked == true){
-								boxes[i].checked = false;
-								filterValues.splice(filterID.indexOf(boxes[i].id), 1);
-								filterClass.splice(filterID.indexOf(boxes[i].id), 1);
-								filterID.splice(filterID.indexOf(boxes[i].id), 1);
-								filterLength = -1
-							}
-						}
-						
-					}
-				}
-				filterData(this);
-			});
+			}
+
 			var andradio = d3.select('#and');
 			andradio.on("change", function(){
-				loadAreas(statesBool);
+				clrFilterClick();
 			});
+
 			var orradio = d3.select('#or');
 			orradio.on("change", function(){
-				loadAreas(statesBool);
+				clrFilterClick();
 			});
+
+			function handleAND(obj, cb){
+				if (filterClause == 'AND'){
+					var boxes = document.getElementsByClassName(obj.className);
+					for(var i = 0; i < boxes.length; i++){
+						if(boxes[i].id != obj.id){
+							if(boxes[i].checked == true){
+								boxes[i].checked = false;
+								filterValues.splice(filterID.indexOf(boxes[i].id), 1);
+								filterClass.splice(filterID.indexOf(boxes[i].id), 1);
+								filterID.splice(filterID.indexOf(boxes[i].id), 1);
+								filterLength = -1
+							}
+						}
+					}
+				}
+				cb && cb(obj);
+			}
 
 			//state county toggle
 			var stateCountyCheckbox = d3.select("#stateCountyCheck")
@@ -297,10 +409,16 @@
 			}
 
 			function getPopDist(poliData){
-				var dist = new Array(57).fill(0);
+				var dist = new Object();
 				poliData.forEach(function(index){
 					if(filter(index)){
-						dist[parseInt(index.inputstate)] += 1;
+						let inputstate = parseInt(index.inputstate);
+						if(inputstate){
+							if(!(dist[inputstate])){
+								dist[inputstate] = 0;
+							}
+							dist[inputstate] += 1;
+						}
 					}
 				});
 				return dist;
@@ -575,9 +693,16 @@
 			function radioUpdate(d){
 				if(d){
 					if(popradio.property("checked") && !(stateCountyCheckbox.property("checked"))){
-						var total = 0;
-						for(var i=0; i < popDist.length; i++){
-							total += popDist[i];
+						let total = 0;
+						let arr = Object.keys(popDist);
+						for(var i=0; i < arr.length; i++){
+							total += popDist[arr[i]];
+						}
+						console.log(total);
+						let id = parseInt(d.id);
+						let value = 0;
+						if(popDist[id]){
+							value = popDist[id];
 						}
 						total = total/10000
 						return "rgb(" + popDist[parseInt(d.id)]/total + ",0," + popDist[parseInt(d.id)]/total + ")"
